# memes-parser

./: README.md  main.py  pyproject.toml  session_name.session
src/: config.py  logger.py  telegram_parser.py  yadisk_repo.py
templates/: index-old.html  index.html  temp.html
